# cardstock

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: wheels.yml
examples/: solid_card.py
python/imgengine/: __init__.py
src/bindings/: module.cpp
src/core/: image_buffer.cpp  image_buffer.hpp
tests/: test_smoke.py
